[project]
name = "pinto-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "millify>=0.1.1",
    "plotly>=5.24.1",
    "polars>=1.16.0",
    "streamlit>=1.40.2",
    "subgrounds>=1.9.1",
]
