[project]
name = "pinto-analysis"
version = "0.1.0"
description = "Analysis for pinto.money protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "millify>=0.1.1",
    "plotly>=5.24.1",
    "streamlit-extras>=0.5.0",
    "streamlit>=1.40.2",
    "subgrounds>=1.9.1",
    "st-copy-to-clipboard>=0.1.6",
]

[dependency-groups]
dev = [
    "pinto-analysis",
]

[tool.uv.sources]
pinto-analysis = { workspace = true }
